// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`priority should match snapshot 1`] = `
<DocumentFragment>
  <div
    class="ant-row"
    style="margin-left: -10px; margin-right: -10px;"
  >
    <div
      class="ant-col ant-col-15"
      style="padding-left: 10px; padding-right: 10px;"
    >
      <h3
        class="ant-typography styledComponents__Title-sc-1ibvcih-4 QAroY"
      >
        Intent Priority
      </h3>
      <h4
        class="ant-typography styledComponents__Subtitle-sc-tz062a-0 styledComponents__Subtitle-sc-1ibvcih-5 fPbHyn dnpHFP"
      >
        What is your primary network intent for Venue: NewZone
      </h4>
      <div
        class="styledComponents__TradeOffWrapper-sc-dck2pu-0 gnjXZP"
      >
        <div
          class="ant-form-item"
        >
          <div
            class="ant-row ant-form-item-row"
          >
            <div
              class="ant-col ant-form-item-control"
            >
              <div
                class="ant-form-item-control-input"
              >
                <div
                  class="ant-form-item-control-input-content"
                >
                  <div
                    class="ant-radio-group ant-radio-group-outline"
                    id="intentPriority"
                  >
                    <div>
                      <label
                        class="ant-radio-wrapper ant-radio-wrapper-in-form-item"
                      >
                        <span
                          class="ant-radio"
                        >
                          <input
                            class="ant-radio-input"
                            type="radio"
                            value="full"
                          />
                          <span
                            class="ant-radio-inner"
                          />
                        </span>
                        <span>
                          High number of clients in a dense network (Default)
                        </span>
                      </label>
                    </div>
                    <div>
                      <label
                        class="ant-radio-wrapper ant-radio-wrapper-in-form-item"
                      >
                        <span
                          class="ant-radio"
                        >
                          <input
                            class="ant-radio-input"
                            type="radio"
                            value="partial"
                          />
                          <span
                            class="ant-radio-inner"
                          />
                        </span>
                        <span>
                          High client throughput in sparse network
                        </span>
                      </label>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-row styledComponents__HeaderWrapper-sc-dck2pu-1 lkeBzI"
        >
          <div
            class="ant-col ant-col-12"
          >
            <span>
              Intent Priority
            </span>
          </div>
          <div
            class="ant-col ant-col-12"
          >
            <span>
              IntentAI Scope
            </span>
          </div>
        </div>
        <div
          class="ant-divider ant-divider-horizontal styledComponents__DividerWrapper-sc-dck2pu-2 ceJqsv"
          role="separator"
        />
        <div
          class="ant-row styledComponents__RowWrapper-sc-dck2pu-3 kFhNXw"
        >
          <div
            class="ant-col ant-col-12"
          >
            Maximize client density - simultaneous connected clients (Default)
          </div>
          <div
            class="ant-col ant-col-12"
          >
            This is AI-Driven RRM Full Optimization mode, where IntentAI will consider only the channels configured on the Controller, assess the neighbor AP radio channels for each AP radio and build a channel plan for each radio to minimize the interference. While building the channel plan, IntentAI may optionally change the AP Radio Channel Width and Transmit Power to minimize the channel interference.
          </div>
        </div>
        <div
          class="ant-row styledComponents__RowWrapper-sc-dck2pu-3 kFhNXw highlight"
        >
          <div
            class="ant-col ant-col-12"
          >
            High client throughput in sparse network
          </div>
          <div
            class="ant-col ant-col-12"
          >
            This is AI-Driven RRM Partial Optimization mode, where IntentAI will consider only the channels configured on the Controller, assess the neighbor AP channels for each AP radio and build a channel plan for each AP radio to minimize interference. While building the channel plan, IntentAI will NOT change the AP Radio Channel Width and Transmit Power.
          </div>
        </div>
      </div>
    </div>
    <div
      class="ant-col ant-col-7 ant-col-offset-2"
      style="padding-left: 10px; padding-right: 10px;"
    >
      <div
        class="styledComponents__SideNotes-sc-ki2m8o-1 esivym"
      >
        <h4
          class="ant-typography"
        >
          Side Notes
        </h4>
        <h4
          class="ant-typography styledComponents__Subtitle-sc-tz062a-0 styledComponents__Subtitle-sc-1ibvcih-5 fPbHyn dnpHFP"
        >
          Potential trade-off?
        </h4>
        <div
          class="styledComponents__TextContent-sc-1ibvcih-10 gqfdQa"
        >
          <div
            class="ant-typography"
          >
            In the quest for minimizing interference between access points (APs), AI algorithms may opt to narrow channel widths. While this can enhance spectral efficiency and alleviate congestion, it also heightens vulnerability to noise, potentially reducing throughput. Narrow channels limit data capacity, making networks more prone to signal degradation and interference, which could compromise overall performance and reliability.
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`priority should render correctly when IS_MLISA_SA is true 1`] = `
<DocumentFragment>
  <div
    class="ant-row"
    style="margin-left: -10px; margin-right: -10px;"
  >
    <div
      class="ant-col ant-col-15"
      style="padding-left: 10px; padding-right: 10px;"
    >
      <h3
        class="ant-typography styledComponents__Title-sc-1ibvcih-4 QAroY"
      >
        Intent Priority
      </h3>
      <h4
        class="ant-typography styledComponents__Subtitle-sc-tz062a-0 styledComponents__Subtitle-sc-1ibvcih-5 fPbHyn dnpHFP"
      >
        What is your primary network intent for Zone: NewZone
      </h4>
      <div
        class="styledComponents__TradeOffWrapper-sc-dck2pu-0 gnjXZP"
      >
        <div
          class="ant-form-item ant-form-item-has-success"
        >
          <div
            class="ant-row ant-form-item-row"
          >
            <div
              class="ant-col ant-form-item-control"
            >
              <div
                class="ant-form-item-control-input"
              >
                <div
                  class="ant-form-item-control-input-content"
                >
                  <div
                    class="ant-radio-group ant-radio-group-outline"
                    id="intentPriority"
                  >
                    <div>
                      <label
                        class="ant-radio-wrapper ant-radio-wrapper-in-form-item"
                      >
                        <span
                          class="ant-radio"
                        >
                          <input
                            class="ant-radio-input"
                            type="radio"
                            value="full"
                          />
                          <span
                            class="ant-radio-inner"
                          />
                        </span>
                        <span>
                          High number of clients in a dense network (Default)
                        </span>
                      </label>
                    </div>
                    <div>
                      <label
                        class="ant-radio-wrapper ant-radio-wrapper-in-form-item"
                      >
                        <span
                          class="ant-radio"
                        >
                          <input
                            class="ant-radio-input"
                            type="radio"
                            value="partial"
                          />
                          <span
                            class="ant-radio-inner"
                          />
                        </span>
                        <span>
                          High client throughput in sparse network
                        </span>
                      </label>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-row styledComponents__HeaderWrapper-sc-dck2pu-1 lkeBzI"
        >
          <div
            class="ant-col ant-col-12"
          >
            <span>
              Intent Priority
            </span>
          </div>
          <div
            class="ant-col ant-col-12"
          >
            <span>
              IntentAI Scope
            </span>
          </div>
        </div>
        <div
          class="ant-divider ant-divider-horizontal styledComponents__DividerWrapper-sc-dck2pu-2 ceJqsv"
          role="separator"
          style="border-color: transparent;"
        />
        <div
          class="ant-row styledComponents__RowWrapper-sc-dck2pu-3 kFhNXw highlight"
        >
          <div
            class="ant-col ant-col-12"
          >
            Maximize client density - simultaneous connected clients (Default)
          </div>
          <div
            class="ant-col ant-col-12"
          >
            This is AI-Driven RRM Full Optimization mode, where IntentAI will consider only the channels configured on the Controller, assess the neighbor AP radio channels for each AP radio and build a channel plan for each radio to minimize the interference. While building the channel plan, IntentAI may optionally change the AP Radio Channel Width and Transmit Power to minimize the channel interference.
          </div>
        </div>
        <div
          class="ant-row styledComponents__RowWrapper-sc-dck2pu-3 kFhNXw"
        >
          <div
            class="ant-col ant-col-12"
          >
            High client throughput in sparse network
          </div>
          <div
            class="ant-col ant-col-12"
          >
            This is AI-Driven RRM Partial Optimization mode, where IntentAI will consider only the channels configured on the Controller, assess the neighbor AP channels for each AP radio and build a channel plan for each AP radio to minimize interference. While building the channel plan, IntentAI will NOT change the AP Radio Channel Width and Transmit Power.
          </div>
        </div>
      </div>
    </div>
    <div
      class="ant-col ant-col-7 ant-col-offset-2"
      style="padding-left: 10px; padding-right: 10px;"
    >
      <div
        class="styledComponents__SideNotes-sc-ki2m8o-1 esivym"
      >
        <h4
          class="ant-typography"
        >
          Side Notes
        </h4>
        <h4
          class="ant-typography styledComponents__Subtitle-sc-tz062a-0 styledComponents__Subtitle-sc-1ibvcih-5 fPbHyn dnpHFP"
        >
          Potential trade-off?
        </h4>
        <div
          class="styledComponents__TextContent-sc-1ibvcih-10 gqfdQa"
        >
          <div
            class="ant-typography"
          >
            In the quest for minimizing interference between access points (APs), AI algorithms may opt to narrow channel widths. While this can enhance spectral efficiency and alleviate congestion, it also heightens vulnerability to noise, potentially reducing throughput. Narrow channels limit data capacity, making networks more prone to signal degradation and interference, which could compromise overall performance and reliability.
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
